--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,7 +1,7 @@
 <h2>New Book</h2>
 <!-- where we put fields for our book and submit button -->
 <!-- indicate that the form will be sending multipart data that could include a file -->
-<form action="/books" method="POST" enctype="multipart/form-data">
+<form action="/books" method="POST" >
     <!-- use shared input file because inputs code will be shared -->
     <!-- import fields from partial code file -->
     <%- include('_form_fields') %>
