finished author routes

--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -9,4 +9,9 @@
 <!-- display all of our authors -->
 <% authors.forEach(author => { %>
     <div><%= author.name %></div>
+    <a href="/authors/<%= author.id %>">View</a>
+    <a href="/authors/<%= author.id %>/edit">Edit</a>
+    <!-- use delete form from partials, pass it author's id for its url -->
+    <%- include('../partials/deleteForm',
+        { url: `/authors/${author.id}` }) %>
 <% }) %> 
