--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -19,7 +19,7 @@
 <div>
     <label>Publish Date</label>
     <input type="date" name="publishDate"
-           value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T') %>">
+           value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
 </div>
 <div>
     <label>Page Count</label>
