--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -1,4 +1,4 @@
-<h2>Edit Author</h2>
+<h2 class="page-header">Edit Author</h2>
 <!-- where we put fields for our author and submit button -->
 <form action="/authors/<%= author.id %>?_method=PUT" method="POST">
     <!-- use shared input file because inputs code will be shared -->
