--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,4 +1,4 @@
-<h2>Search Authors</h2>
+<h2 class="page-header">Search Authors</h2>
 <!-- collect user input with form for the search -->
 <form action="/authors" method="GET">
     <label>Name</label>
@@ -9,9 +9,11 @@
 <!-- display all of our authors -->
 <% authors.forEach(author => { %>
     <div><%= author.name %></div>
-    <a href="/authors/<%= author.id %>">View</a>
-    <a href="/authors/<%= author.id %>/edit">Edit</a>
-    <!-- use delete form from partials, pass it author's id for its url -->
-    <%- include('../partials/deleteForm',
-        { url: `/authors/${author.id}` }) %>
+    <div class="btn-row">
+        <a class="btn btn-primary" href="/authors/<%= author.id %>">View</a>
+        <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+        <!-- use delete form from partials, pass it author's id for its url -->
+        <%- include('../partials/deleteForm',
+            { url: `/authors/${author.id}` }) %>
+    </div>
 <% }) %>
