--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,4 +1,4 @@
-<h2>New Author</h2>
+<h2 class="page-header">New Author</h2>
 <!-- where we put fields for our author and submit button -->
 <form action="/authors" method="POST">
     <!-- use shared input file because inputs code will be shared -->
