--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,4 +1,4 @@
-<h2>Search Book</h2>
+<h2 class="page-header">Search Book</h2>
 <!-- collect user input with form for the search -->
 <form action="/books" method="GET">
     <div>
