--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,4 +1,4 @@
-<h2>New Book</h2>
+<h2 class="page-header">New Book</h2>
 <!-- where we put fields for our book and submit button -->
 <!-- indicate that the form will be sending multipart data that could include a file -->
 <form action="/books" method="POST">
