--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<h2>Recently Added</h2>
+<h2 class="page-header">Recently Added</h2>
 <div>
     <!-- display all of our authors with clickable images -->
     <% books.forEach(book => { %>
