--- a/views/partials/deleteForm.ejs
+++ b/views/partials/deleteForm.ejs
@@ -1,4 +1,4 @@
 <!-- use method override for delete -->
 <form method="POST" action="<%= url %>?_method=DELETE">
-    <button type="submit">Delete</button>
+    <button class="btn btn-danger" type="submit">Delete</button>
 </form>
