--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -5,7 +5,8 @@
     <!-- use shared input file because inputs code will be shared -->
     <!-- import fields from partial code file -->
     <%- include('_form_fields') %>
-    <!-- cancel creation of book -->
-    <a href="/books">Cancel</a>
-    <button type="submit">Create</button>
+    <div class="form-row form-row-end btn-row">
+        <a class="btn btn-danger" href="/books">Cancel</a>
+        <button class = "btn btn-primary" type="submit">Create</button>
+    </div>
 </form>
