--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,5 +1,9 @@
 <!-- use underscore in file name to indicate that this is a partial file -->
 
-<label>Name</label>
-<!-- output author's name using the object -->
-<input type="text" name="name" value="<%= author.name %>">
+<div class="form-row">
+    <div class="form-item">
+        <label>Name</label>
+        <!-- output author's name using the object -->
+        <input type="text" name="name" value="<%= author.name %>">
+    </div>
+</div>
