--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,9 +1,15 @@
 <h2 class="page-header">Search Authors</h2>
 <!-- collect user input with form for the search -->
 <form action="/authors" method="GET">
-    <label>Name</label>
-    <input type="text" name="name" value="<%= searchOptions.name %>">
-    <button type="submit">Search</button>
+    <div class="form-row">
+        <div class="form-item">
+            <label>Name</label>
+            <input type="text" name="name" value="<%= searchOptions.name %>">
+        </div>
+    </div>
+    <div class="form-row form-row-end">
+        <button class="btn btn-primary" type="submit">Search</button>
+    </div>
 </form>
 <br>
 <!-- display all of our authors -->
