--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -35,7 +35,7 @@
         <label>Cover</label>
         <!-- will be actual file instead of a file name, they don't allow you to set a default value, so we have to remove that -->
         <!-- have to add class of filepond for input to use filepond -->
-        <input type="file" name="cover" class="filepond">
+        <input type="file" name="cover" class="book-cover filepond">
     </div>
     <div class="form-item">
         <label>Description</label>
