--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -22,11 +22,7 @@
     </div>
 </form>
 <br>
-<div>
-    <!-- display all of our authors -->
-    <% books.forEach(book => { %>
-        <a href="/books/<%= book.id %>">
-            <img height="150" width="100" src="<%= book.coverImagePath %>">
-        </a>
-    <% }) %> 
-</div>
+<%- include('../partials/bookGrid', {
+    books: books,
+    large: true
+}) %>
