--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -14,12 +14,14 @@
 <br>
 <!-- display all of our authors -->
 <% authors.forEach(author => { %>
-    <div><%= author.name %></div>
-    <div class="btn-row">
-        <a class="btn btn-primary" href="/authors/<%= author.id %>">View</a>
-        <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
-        <!-- use delete form from partials, pass it author's id for its url -->
-        <%- include('../partials/deleteForm',
-            { url: `/authors/${author.id}` }) %>
+    <div class="author-row">
+        <div class="author-name"><%= author.name %></div>
+        <div class="btn-row">
+            <a class="btn btn-primary" href="/authors/<%= author.id %>">View</a>
+            <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+            <!-- use delete form from partials, pass it author's id for its url -->
+            <%- include('../partials/deleteForm',
+                { url: `/authors/${author.id}` }) %>
+        </div>
     </div>
 <% }) %>
